--- a/web_app/templates/about.html
+++ b/web_app/templates/about.html
@@ -1,23 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>My App</title>
-</head>
-<body>
+{% extends "layout.html" %}
 
-    {% extends "bootstrap_layout.html" %}
-    {% set active_page = "about" %}
-    
-    {% block content %}
-    
-        <h1>About Me</h1>
-    
-        <p>todo write some stuff here</p>
-    
-    {% endblock %}
+{% block content %}
 
-</body>
-</html>
+    <h1>About Me</h1>
+
+    <p>todo write some stuff here</p>
+
+{% endblock %}
+
 
 
